
syntax = "proto3";

package task.v1;

option go_package = "gosprints/internal/grpc/task/pb";

import "google/protobuf/timestamp.proto";

message Task {
    int32 id = 1;  // поменял string на int32
    string text = 2;
    string status = 3;
    string user_id = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp started_at = 6;  // optional
    google.protobuf.Timestamp ended_at = 7;    // optional
}

message CreateTaskRequest {
    string text = 1;
    string user_id = 2;
}

message CreateTaskResponse {
    Task task = 1;
}

message GetTaskRequest {
    int32 id = 1;  // поменял string на int32
}

message GetTaskResponse {
    Task task = 1;
}

message ListTasksRequest {
    string user_id = 1;
    int32 page = 2;
    int32 page_size = 3;
    string status = 4;
}

message ListTasksResponse {
    repeated Task tasks = 1;
    int32 total = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message UpdateTaskRequest {
    int32 id = 1;  // Изменили string на int32
    string text = 2;
    string status = 3;
}

message UpdateTaskResponse {
    Task task = 1;
}

message DeleteTaskRequest {
    int32 id = 1;  // поменял string на int32
}

message DeleteTaskResponse {
    bool success = 1;
}

// Поиск задач
message SearchTasksRequest {
    string query = 1;
    string user_id = 2;
    int32 page = 3;
    int32 page_size = 4;
}

message SearchTasksResponse {
    repeated Task tasks = 1;
    int32 total = 2;
    int32 page = 3;
    int32 page_size = 4;
}

// Сервис задач
service TaskService {
    rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse);
    rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
    rpc ListTasks(ListTasksRequest) returns (ListTasksResponse);
    rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
    rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
    rpc SearchTasks(SearchTasksRequest) returns (SearchTasksResponse);
}